# OcularLDT-project

./: .gitignore  README.md  config.json  config.toml  pyproject.toml
analysis/: 001a-make_pca.py  001b-make_ica.py
data/: README.md
data/group/: OLDT_ias.txt
input/: E-MEG.xmind  sentences.py
input/articles/: E-MEG.bib
input/exp/: E-MEG Subject Log.xlsx  OLDT.ebz  OLDT1.ebz  OLDT2.ebz  OLDT_EB.ebz  SENT_EB.ebz  Simp_Sent1.ebz
input/free_association/: setup.py
input/protocol/: SENT_EB.ebz
notes/: OLDT_notes.numbers  exp_notes.numbers
output/: dissertation_outline.tex
scripts/: 000-make_raw.py  001-make_events.py  001-make_raw.py  002-make_epochs.py  002-make_events.py  002b-make_epochs.py  003-make_bids.py  003a-make_pca.py  003b-make_ica.py  004-make_cov.py  005-make_fwd.py  006-make_inv.py  01-make_events.py  02-make_epochs.py  02-make_pca.py  02a-make_pca.py  02b-make_ica.py  02c-make_pca_full.py  03-priming_sensor_analysis.py  03a-make_pca.py  04-make_cov.py  04-priming_sensor_analysis.py  05-make_fwd.py  101a-get_fixation_times.py  101a-get_region_times.py  101a-get_target_times.py  101b-get_fixation_times.py  102-make_design_matrix.py  102a-make_region_design_matrix.py  102b-make_fixation_design_matrix.py  102c-make_depmeas_design_matrix.py  _helper.py  _recode_events.py  analysis-fixation-priming.R  analysis-reading-priming.R  analysis-sensor-bigram_regression.py  analysis-sensor-freq_regression.py  analysis-sensor-priming.py  analysis-sensor-priming_test.py  analysis-sensor-reading_regression.py  (+41 more)
stim/: free_association.py  make_file.py
(+143 files in other folders)
